# nebiushack

./: .gitignore  GETTING_STARTED.md  README.md  agent.py  config.yaml  generate_comparison_docx.py  generate_journey_docx.py  prepare.py  presentation.html  program.md  pyproject.toml  render_policy.py  reward.py  reward_weights.json  train.py  train_loco.py  train_mujoco.py  visualize.py  warner.md
checkpoints/: best_score.txt
checkpoints/best/: PPOJax_saved.pkl
docs/: DESIGN.md  SETUP.md  TASKS.md  TASKS_v2.md  TASKS_v3.md  autorobot_vs_sonic.docx  autorobot_vs_sonic.md  journey.docx  journey.md  real.md
logs/: experiment_0001.json  experiment_0002.json
results/: summary.txt
scripts/: setup_vm.sh  test_nebius_api.py  verify_env.py
